[gd_scene load_steps=20 format=3 uid="uid://c52slx445x2w3"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_v4npo"]
[ext_resource type="Script" path="res://scripts/player/machine_state.gd" id="2_h0e36"]
[ext_resource type="Script" path="res://scripts/player/states/idle.gd" id="3_t4jq7"]
[ext_resource type="Script" path="res://scripts/player/states/running.gd" id="4_kh3uy"]
[ext_resource type="Script" path="res://scripts/player/states/walking.gd" id="5_qaif1"]
[ext_resource type="Script" path="res://scripts/player/states/crouching.gd" id="6_n65nx"]
[ext_resource type="Script" path="res://scripts/player/states/crawling.gd" id="7_6t8gy"]
[ext_resource type="Script" path="res://scripts/player/states/climbing.gd" id="8_yjpdc"]
[ext_resource type="Script" path="res://scripts/player/states/falling.gd" id="9_ea6j6"]
[ext_resource type="Script" path="res://scripts/player/states/jumping.gd" id="10_dy0yl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oq5d7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fq17h"]
albedo_color = Color(1, 0.243137, 0.0588235, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_t5nd5"]
material = SubResource("StandardMaterial3D_fq17h")

[sub_resource type="SphereShape3D" id="SphereShape3D_3t0kn"]

[sub_resource type="Animation" id="Animation_sf1hj"]
resource_name = "crawl"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.2, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.2, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.8, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.8, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("head:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.8, 0)]
}

[sub_resource type="Animation" id="Animation_iaycn"]
resource_name = "crawl_off"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 0.2, 1), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 0.2, 1), Vector3(1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.8, 0), Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.8, 0), Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("head:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.8, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vh80v"]
resource_name = "crouch"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.4, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.4, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.6, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.6, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("head:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.6, 0)]
}

[sub_resource type="Animation" id="Animation_p83a7"]
resource_name = "crouch_off"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 0.4, 1), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 0.4, 1), Vector3(1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.6, 0), Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.6, 0), Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.6, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_54me0"]
_data = {
"crawl": SubResource("Animation_sf1hj"),
"crawl_off": SubResource("Animation_iaycn"),
"crouch": SubResource("Animation_vh80v"),
"crouch_off": SubResource("Animation_p83a7")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_v4npo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_oq5d7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_t5nd5")

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.409, 0)
shape = SubResource("SphereShape3D_3t0kn")
target_position = Vector3(0, 0, 0)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_h0e36")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_t4jq7")

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource("4_kh3uy")

[node name="Walking" type="Node" parent="StateMachine"]
script = ExtResource("5_qaif1")

[node name="Crouching" type="Node" parent="StateMachine"]
script = ExtResource("6_n65nx")

[node name="Crawling" type="Node" parent="StateMachine"]
script = ExtResource("7_6t8gy")

[node name="Climbing" type="Node" parent="StateMachine"]
script = ExtResource("8_yjpdc")

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource("9_ea6j6")

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource("10_dy0yl")

[node name="head" type="Node3D" parent="."]

[node name="Camera3d" type="Camera3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.479, 0)

[node name="SpotLight3D" type="SpotLight3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 0.970137, 0.242556, 0, -0.242556, 0.970137, 0, 0.462, 0)
light_energy = 2.0
light_volumetric_fog_energy = 3.0
spot_range = 100.0
spot_attenuation = 2.0
spot_angle_attenuation = 1.93187

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_54me0")
}

[node name="ActionableArea" type="Area3D" parent="."]
transform = Transform3D(164.212, 0, 0, 0, 164.212, 0, 0, 0, 164.212, 0, 0.122, 0)
collision_mask = 3

[connection signal="area_entered" from="ActionableArea" to="." method="_on_actionable_area_area_entered"]
